# qtChess

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  chess.cc  chess.cpp  chess.h  chessboard.cc  chessboard.cpp  chessboard.h  chessboardwidget.cc  chessboardwidget.cpp  chessboardwidget.h  chessman.cpp  chessman.h  coordinate.cc  coordinate.h  main.cc  main.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgamedialog.cc  newgamedialog.cpp  newgamedialog.h  newgamedialog.ui  piece.qrc  settingwidget.cc  settingwidget.h  settingwidget.ui
